--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -78,28 +78,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>Gobabis</td>\n",
-       "      <td>-22.45</td>\n",
-       "      <td>18.9667</td>\n",
-       "      <td>76.33</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.41</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>1619269721</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        City    Lat      Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
-       "182  Gobabis -22.45  18.9667     76.33        14           0        4.41   \n",
-       "\n",
-       "    Country        Date  \n",
-       "182      NA  1619269721  "
+       "Empty DataFrame\n",
+       "Columns: [City, Lat, Lng, Max Temp, Humidity, Cloudiness, Wind Speed, Country, Date]\n",
+       "Index: []"
       ]
      },
      "execution_count": 2,
@@ -109,7 +95,7 @@
    ],
    "source": [
     "#create import file path\n",
-    "inputFile = \"../WeatherPy/Output/cities.csv\"\n",
+    "inputFile = \"../Output/cities.csv\"\n",
     "\n",
     "#load dataframe\n",
     "weatherCitiesDF = pd.read_csv(inputFile,keep_default_na=False)\n",
@@ -140,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "525bfec0764a4718a0b78220f786a5bd",
+       "model_id": "488cbda426df4f0b959686a89a3046c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,108 +210,108 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.000000e+00</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>4.000000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>-15.506450</td>\n",
-       "      <td>55.932083</td>\n",
-       "      <td>75.361667</td>\n",
-       "      <td>48.666667</td>\n",
+       "      <td>-3.434900</td>\n",
+       "      <td>-7.013600</td>\n",
+       "      <td>74.300000</td>\n",
+       "      <td>65.500000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.710000</td>\n",
-       "      <td>1.619270e+09</td>\n",
+       "      <td>6.49500</td>\n",
+       "      <td>1.619298e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>23.484573</td>\n",
-       "      <td>46.948071</td>\n",
-       "      <td>3.044637</td>\n",
-       "      <td>28.619341</td>\n",
+       "      <td>24.909333</td>\n",
+       "      <td>55.887833</td>\n",
+       "      <td>3.446738</td>\n",
+       "      <td>27.670682</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.025961</td>\n",
-       "      <td>2.507410e+02</td>\n",
+       "      <td>2.89476</td>\n",
+       "      <td>1.444054e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>-33.015300</td>\n",
-       "      <td>18.966700</td>\n",
+       "      <td>-19.843600</td>\n",
+       "      <td>-71.337500</td>\n",
        "      <td>71.600000</td>\n",
-       "      <td>14.000000</td>\n",
+       "      <td>27.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.010000</td>\n",
-       "      <td>1.619269e+09</td>\n",
+       "      <td>2.30000</td>\n",
+       "      <td>1.619298e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>-24.650025</td>\n",
-       "      <td>23.290400</td>\n",
-       "      <td>73.400000</td>\n",
-       "      <td>24.500000</td>\n",
+       "      <td>-18.190450</td>\n",
+       "      <td>-44.801900</td>\n",
+       "      <td>71.600000</td>\n",
+       "      <td>54.750000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.677500</td>\n",
-       "      <td>1.619270e+09</td>\n",
+       "      <td>5.75750</td>\n",
+       "      <td>1.619298e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>-23.225000</td>\n",
-       "      <td>31.337900</td>\n",
-       "      <td>74.865000</td>\n",
-       "      <td>53.000000</td>\n",
+       "      <td>-13.618300</td>\n",
+       "      <td>-0.558900</td>\n",
+       "      <td>73.400000</td>\n",
+       "      <td>73.500000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.510000</td>\n",
-       "      <td>1.619270e+09</td>\n",
+       "      <td>7.48000</td>\n",
+       "      <td>1.619298e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>-20.850025</td>\n",
-       "      <td>93.916025</td>\n",
-       "      <td>77.590000</td>\n",
-       "      <td>68.750000</td>\n",
+       "      <td>1.137250</td>\n",
+       "      <td>37.229400</td>\n",
+       "      <td>76.100000</td>\n",
+       "      <td>84.250000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.335000</td>\n",
-       "      <td>1.619270e+09</td>\n",
+       "      <td>8.21750</td>\n",
+       "      <td>1.619298e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>31.610000</td>\n",
-       "      <td>118.566700</td>\n",
-       "      <td>79.430000</td>\n",
-       "      <td>83.000000</td>\n",
+       "      <td>33.340600</td>\n",
+       "      <td>44.400900</td>\n",
+       "      <td>78.800000</td>\n",
+       "      <td>88.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>9.220000</td>\n",
-       "      <td>1.619270e+09</td>\n",
+       "      <td>8.72000</td>\n",
+       "      <td>1.619299e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Lat         Lng   Max Temp   Humidity  Cloudiness  Wind Speed  \\\n",
-       "count   6.000000    6.000000   6.000000   6.000000         6.0    6.000000   \n",
-       "mean  -15.506450   55.932083  75.361667  48.666667         0.0    4.710000   \n",
-       "std    23.484573   46.948071   3.044637  28.619341         0.0    3.025961   \n",
-       "min   -33.015300   18.966700  71.600000  14.000000         0.0    1.010000   \n",
-       "25%   -24.650025   23.290400  73.400000  24.500000         0.0    2.677500   \n",
-       "50%   -23.225000   31.337900  74.865000  53.000000         0.0    4.510000   \n",
-       "75%   -20.850025   93.916025  77.590000  68.750000         0.0    6.335000   \n",
-       "max    31.610000  118.566700  79.430000  83.000000         0.0    9.220000   \n",
+       "             Lat        Lng   Max Temp   Humidity  Cloudiness  Wind Speed  \\\n",
+       "count   4.000000   4.000000   4.000000   4.000000         4.0     4.00000   \n",
+       "mean   -3.434900  -7.013600  74.300000  65.500000         0.0     6.49500   \n",
+       "std    24.909333  55.887833   3.446738  27.670682         0.0     2.89476   \n",
+       "min   -19.843600 -71.337500  71.600000  27.000000         0.0     2.30000   \n",
+       "25%   -18.190450 -44.801900  71.600000  54.750000         0.0     5.75750   \n",
+       "50%   -13.618300  -0.558900  73.400000  73.500000         0.0     7.48000   \n",
+       "75%     1.137250  37.229400  76.100000  84.250000         0.0     8.21750   \n",
+       "max    33.340600  44.400900  78.800000  88.000000         0.0     8.72000   \n",
        "\n",
        "               Date  \n",
-       "count  6.000000e+00  \n",
-       "mean   1.619270e+09  \n",
-       "std    2.507410e+02  \n",
-       "min    1.619269e+09  \n",
-       "25%    1.619270e+09  \n",
-       "50%    1.619270e+09  \n",
-       "75%    1.619270e+09  \n",
-       "max    1.619270e+09  "
+       "count  4.000000e+00  \n",
+       "mean   1.619298e+09  \n",
+       "std    1.444054e+02  \n",
+       "min    1.619298e+09  \n",
+       "25%    1.619298e+09  \n",
+       "50%    1.619298e+09  \n",
+       "75%    1.619298e+09  \n",
+       "max    1.619299e+09  "
       ]
      },
      "execution_count": 4,
@@ -359,9 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No hotel found\n"
+     ]
+    }
+   ],
    "source": [
     "nameL = []\n",
     "latL = []\n",
@@ -382,7 +376,7 @@
     "        #geocoordinates\n",
     "        targetCoordinates = f\"{lat} , {lng}\"\n",
     "        targetSearch = \"hotel\"\n",
-    "        targetRadius = 5000\n",
+    "        targetRadius = 10000\n",
     "        #targetType = \"hotel\"\n",
     "        #print(targetCoordinates) #sanity check\n",
     "\n",
@@ -409,13 +403,16 @@
     "        ctryL.append(row['Country'])\n",
     "        \n",
     "    except KeyError:\n",
-    "        print(f\"City or Hotel not found\")\n",
+    "        print(f\"City or hotel not found\")\n",
+    "        \n",
+    "    except IndexError:\n",
+    "        print(f\"No hotel found\")\n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -450,81 +447,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Hospitality Carnarvon</td>\n",
-       "      <td>Carnarvon</td>\n",
-       "      <td>-24.892341</td>\n",
-       "      <td>113.655034</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>6 West St, South Carnarvon</td>\n",
+       "      <td>Apart Hotel Atenea</td>\n",
+       "      <td>Ilo</td>\n",
+       "      <td>-17.657635</td>\n",
+       "      <td>-71.337780</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>Villa Marina Mz. 08 - Lote. 01, Ilo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Blue Lagoon Hotel</td>\n",
-       "      <td>East London</td>\n",
-       "      <td>-32.983472</td>\n",
-       "      <td>27.951098</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>21 Blue Bend Pl, Blue Bend, East London</td>\n",
+       "      <td>Babylon Rotana</td>\n",
+       "      <td>Baghdad</td>\n",
+       "      <td>33.291224</td>\n",
+       "      <td>44.390489</td>\n",
+       "      <td>IQ</td>\n",
+       "      <td>Karada Street, Baghdad</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Onze Rust Guest House</td>\n",
-       "      <td>Gobabis</td>\n",
-       "      <td>-22.454125</td>\n",
-       "      <td>18.977207</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>Rugby, Gobabis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>The Esplanade Hotel</td>\n",
-       "      <td>Port Hedland</td>\n",
-       "      <td>-20.313925</td>\n",
-       "      <td>118.576081</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>2 Anderson St, Port Hedland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Entabeni Hotel</td>\n",
-       "      <td>Hukuntsi</td>\n",
-       "      <td>-23.999329</td>\n",
-       "      <td>21.791398</td>\n",
-       "      <td>BW</td>\n",
-       "      <td>Unnamed Road, Hukuntsi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Desert Gat</td>\n",
-       "      <td>Kiryat Gat</td>\n",
-       "      <td>31.602743</td>\n",
-       "      <td>34.764339</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>Sderot HaAtsma'ut 134, Kiryat Gat</td>\n",
+       "      <td>Golden Peacock Resort Hotel</td>\n",
+       "      <td>Beira</td>\n",
+       "      <td>-19.827120</td>\n",
+       "      <td>34.917726</td>\n",
+       "      <td>MZ</td>\n",
+       "      <td>Beira</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Hotel Name          City  Hotel Lat   Hotel Lng Country  \\\n",
-       "0  Hospitality Carnarvon     Carnarvon -24.892341  113.655034      AU   \n",
-       "1      Blue Lagoon Hotel   East London -32.983472   27.951098      ZA   \n",
-       "2  Onze Rust Guest House       Gobabis -22.454125   18.977207      NA   \n",
-       "3    The Esplanade Hotel  Port Hedland -20.313925  118.576081      AU   \n",
-       "4         Entabeni Hotel      Hukuntsi -23.999329   21.791398      BW   \n",
-       "5             Desert Gat    Kiryat Gat  31.602743   34.764339      IL   \n",
+       "                    Hotel Name     City  Hotel Lat  Hotel Lng Country  \\\n",
+       "0           Apart Hotel Atenea      Ilo -17.657635 -71.337780      PE   \n",
+       "1               Babylon Rotana  Baghdad  33.291224  44.390489      IQ   \n",
+       "2  Golden Peacock Resort Hotel    Beira -19.827120  34.917726      MZ   \n",
        "\n",
-       "                                   Address  \n",
-       "0               6 West St, South Carnarvon  \n",
-       "1  21 Blue Bend Pl, Blue Bend, East London  \n",
-       "2                           Rugby, Gobabis  \n",
-       "3              2 Anderson St, Port Hedland  \n",
-       "4                   Unnamed Road, Hukuntsi  \n",
-       "5        Sderot HaAtsma'ut 134, Kiryat Gat  "
+       "                               Address  \n",
+       "0  Villa Marina Mz. 08 - Lote. 01, Ilo  \n",
+       "1               Karada Street, Baghdad  \n",
+       "2                                Beira  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,13 +534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "525bfec0764a4718a0b78220f786a5bd",
+       "model_id": "488cbda426df4f0b959686a89a3046c2",
        "version_major": 2,
        "version_minor": 0
       },
